[package]
name = "babylon_graphics_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.76"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[features]
wgpu-native-rlib = ["dep:wgpu-native"]

[dependencies]
bytemuck = { workspace = true }
femtovg = { workspace = true }
image = { workspace = true }
imgref = { workspace = true }
pollster = { workspace = true }
raw-window-handle = { workspace = true }
rgb = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "visionos"))'.dependencies]
wgpu-native = { git = "https://github.com/gfx-rs/wgpu-native.git", tag = "v29.0.0.0", optional = true, default-features = false, features = ["wgsl", "metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-native = { git = "https://github.com/gfx-rs/wgpu-native.git", tag = "v29.0.0.0", optional = true, default-features = false, features = ["wgsl", "dx12", "vulkan"] }

[target.'cfg(not(any(target_os = "macos", target_os = "ios", target_os = "visionos", target_os = "windows")))'.dependencies]
wgpu-native = { git = "https://github.com/gfx-rs/wgpu-native.git", tag = "v29.0.0.0", optional = true, default-features = false, features = ["wgsl", "vulkan"] }

[build-dependencies]
bindgen = "=0.72.1"
